<resources>
    <string name="app_name">OLX</string>
    <string name="text_head">Compre, venda e negocie ofertas</string>
    <string name="text_desc">proximo de voce</string>
    <string name="comecar_a_navegar">comecar a navegar</string>
    <string name="discover">Discover</string>
    <string name="home_subtext2">3H 254 Mahindra Street, Bangalore</string>
    <string name="_85_lakhs">85 Lakhs</string>
    <string name="image_load">Image Load</string>
    <string name="imagedesc">ImageDesc</string>
    <string name="price_in_dollor">R$5.600,00</string>
    <string name="luanda_lda">Luanda, Lda</string>
    <string name="apple_macbook_pro">Apple MacBook Pro</string>
    <string name="product_image">product image</string>
    <string name="all_categories">All Categories</string>
    <string name="title_activity_product_price">ProductPriceActivity</string>
    <string name="splash_loading">Loading…</string>
    <string name="text_recents">Recents</string>
    <string name="text_search">Search</string>
    <string name="text_profile">Profile</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_post">New Post</string>
    <string name="message_hint">Say anything ...</string>
    <string name="send">Send</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>
    <string name="login_email">Username</string>
    <string name="login_password">Password</string>
    <string name="SignUp_name">Full Name</string>
    <string name="SignUp_username">Username</string>
    <string name="SignUp_email">Your Email</string>
    <string name="SignUp_password">Password</string>
    <string name="SignUp_create">Create Account</string>
    <string name="SignUp_alredy">Already a registered? Login</string>
    <string name="forgot_lost">PASSWORD LOST?</string>
    <string name="forgot_dont">Don\'t worry, just enter the email you used to register truth AroundMe</string>
    <string name="forgot_reset">Reset Password</string>
    <string name="forgot_remember">Remember your password? Login</string>
    <string name="login_teken">Email already taken, choose an other</string>
    <string name="login_cant">Can\'t connect. Verify your Data Plan or Wifi</string>
    <string name="login_error">Internal error. Try Again Later</string>
    <string name="password_error">Password does not meet the Password Policy requirements</string>
    <string name="login_auth2">Authenticating…</string>
    <string name="login_inc">Username or password incorrect</string>
    <string name="login_incor">Incorrect Username, Please verify</string>
    <string name="login_verify">VERIFY</string>
    <string name="login_inco_email">Incorrect Email address or Username, Please Verify</string>
    <string name="login_inc_veri">VERIFY</string>
    <string name="login_not_fou">Email not found address or Username, Please Verify</string>
    <string name="login_verify2">VERIFY</string>
    <string name="login_request">Request time out. Try Again Later</string>
    <string name="login_ok">OK</string>
    <string name="login_cont_con">Can\'t connect. Verify your Data Plan or Wifi</string>
    <string name="login_ok2">OK</string>
    <string name="login_intern">Internal error. Try Again Later</string>
    <string name="login_no_int">No internet connection. Please Connect</string>
    <string name="login_press_again">Press back again to exit</string>
    <string name="login_missi">Missing same fields. Please verify</string>
    <string name="login_email_at">At least 6 characters</string>
    <string name="login_pass_at">At least 6 alphanumeric characters</string>
    <string name="signup_creat">Creating Account…</string>
    <string name="signup_yh">"Yh, i'm using AroundMe it's great "</string>
    <string name="signup_userta">Username  already taken, choose an other</string>
    <string name="signup_request">Request time out. Try Again Later</string>
    <string name="signup_pass_atl">At least 6 alphanumeric characters</string>
    <string name="signup_valid_email">Enter a valid email address</string>
    <string name="signup_user_at">At least 3 characters</string>
    <string name="signup_name_at">At least 3 characters</string>
    <string name="signup_request_t">Request time out. Try Again Later</string>
    <string name="forgot_veri">Cheking your email…</string>
    <string name="forgot_send">Email send to </string>
    <string name="forgot_send2">Recovery email sent</string>
    <string name="forgot_check">Check your email inbox to reset the your account password</string>
    <string name="forgot_em_not">"Email not Found"</string>
    <string name="forgot_email_wasnt">Your email wasn\'t found in our server, please verify or create a new account</string>
    <string name="forgot_register">REGISTER</string>
    <string name="forgot_valid_email">Enter a valid email address</string>
    <string name="login_login">LOGIN</string>
    <string name="forgot_login">Login</string>
    <string name="login_verifed">Please Verify your email first</string>
    <string name="forgot_veri2">Checking your username …</string>
    <string name="forgot_email_wasnt2">Your username wasn\'t found in our server, please verify or create a new account</string>
    <string name="forgot_em_not2">Username not Found</string>
    <string name="forgot_veri3">Sending recovery link…</string>
    <string name="signup_male">Male</string>
    <string name="login_email_fail">Email incorrect</string>
    <string name="signup_female">Female</string>
    <string name="signup_gender">Select Gender</string>
    <string name="signup_gender_explzin">Sorry, but you must specify your gender (If you are Male or Female)</string>
    <string name="more_info">For more information see our</string>
    <string name="signup_accept">By clicking the \"create account\" button, you are accepting our </string>
    <string name="terms"><![CDATA[<a href=\'http://www.angopapo.com/terms\'> Terms of use </a>]]></string>
    <string name="privacy"><![CDATA[<a href=\'http://www.angopapo.com/privacy\'> Privacy policy </a>]]></string>
    <string name="google_api">http://maps.google.com</string>
    <string name="and">and our</string>
    <string name="terms_title2">Terms of use</string>
    <string name="privacy_title2">Privacy Policy</string>
    <string name="conf_4">Cancel</string>
    <string name="favorito">Adicionou sua pulicacao nos seus favoritos</string>
    <string name="settings_no_inte">No internet. Connect and try again</string>
    <string name="noti_follow">stared following you.</string>
    <string name="noti_like">liked your post.</string>
    <string name="noti_comment">commented on your post.</string>
    <string name="posting">Publishing…</string>
    <string name="offline_publish">There was a problem, please check your internet connection.</string>
    <string name="click_camera">No photo to publish, please go back.</string>
    <string name="my_account">My Account</string>
    <string name="basic_information2">My Account</string>
    <string name="edit_username_phone_password_and_others">VIP Member, Location and others</string>
    <string name="settings_loging">logging out</string>
    <string name="settings_log_are">Are you sure you want to logout?</string>
    <string name="settings_log_yes">Yes</string>
    <string name="settings_log_yes2">Logging out…</string>
    <string name="invite_friends_header2">Share InstaPics in your favorites social networks, or Invite your friends and get more followers!</string>
    <string name="invite_friends_footer"><u>No, thanks</u></string>
    <string name="invite_friends_toast_after_share">You are sending the Stagger Google Play url</string>
    <string name="invite_friends_share_chooser">Share Stagger Google Play URL</string>
    <string name="choose_to_share">Choose one to begin sharing</string>
    <string name="invite_friends_market_url" translatable="false">https://play.google.com/store/apps/details?id=com.angopapo.instapics</string>
    <string name="invite_friends_share_other_message">Download this app, you will find fun                       , i\'m using join me: %s</string>
    <string name="about_copy">© Copyright 2017 | Angopapo, LDA</string>
    <string name="about_all">All Rights reserved.</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_terms">Terms &amp; Privacy</string>
    <string name="settings_about">About &amp; Share</string>
    <string name="settings_use">Terms of use</string>
    <string name="settings_about2">About</string>
    <string name="settings_privacy">Privacy Policy</string>
    <string name="important_click_to_read_our_terms">Important, click to read our terms.</string>
    <string name="important_click_to_read_our_privacy">Important, click to read our privacy.</string>
    <string name="version_build_and_rate_us_5_stars">Version, Build and Rate us 5 stars</string>
    <string name="share_with_your_friends_or_family">Share with your friends and family</string>
    <string name="invite_your_friends_and_family_to_use_angoappo">Invite your friends and family to use angoappo</string>
    <string name="share">Share &amp; Invite friends</string>
    <string name="invite_friends">Invite friends</string>
    <string name="wait_int">Internet connection is not available</string>
    <string name="wait_wait">Wait for internet connection</string>
    <string name="Match_years">" Years"</string>
    <string name="offline_mode">No internet connection</string>
    <string name="about_title">About</string>
    <string name="AppVersion">Version 1.0.1</string>
    <string name="AppBuild">Build 1.0.3.5</string>
    <string name="atten">Attention</string>
    <string name="following">FOLLOWING</string>
    <string name="unfollow">You will no longer receive news from this user Are you sure you want to unfollow</string>
    <string name="follow">FOLLOW</string>
    <string name="not_comments_yet_be_first_commenting_post">No comments yet. Be first to comment this post</string>
    <string name="comment_here">Comment here…</string>
    <string name="loading_please_wait">Loading…</string>
    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <plurals name="comments_count">
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
    <string name="edit_post">Cancel</string>
    <string name="edit_post_original">Cancel</string>
    <string name="delete_post">Delete this post</string>
    <string name="hide_post">Hide this post</string>
    <string name="repport_post">Repport this post</string>
    <string name="cancel">Cancel</string>
    <string name="dele_me">This post will be totaly deleted, and will not be able see this again</string>
    <string name="not_hideh_post">Publish</string>
    <string name="dele_post">Delete</string>
    <string name="update_post">Update</string>
    <string name="edit_text">Edit your post</string>
    <string name="edited"> - Edited</string>
    <string name="visible_to_you">This is only visible to you</string>
    <string name="will_update">The post will be updated. Scroll Down to updated.</string>
    <string name="later_try">Not updated, Try later</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="senha">Senha</string>
    <string name="nome_de_usuario">Usuario ou e-mail</string>
    <string name="ficar_ligado">Ficar ligado</string>
    <string name="entrar">Entrar</string>
    <string name="pre_o">Preço</string>
    <string name="localiza_o">Localização</string>
    <string name="descri_o">Descrição</string>
    <string name="t_tulo_do_an_ncio">Título do anúncio</string>
    <string name="adicione_no_m_ximo_8_fotos">Adicione no máximo 8 fotos</string>
    <string name="email">Email</string>
</resources>