<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CardViewProductPrice"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/product_image_id"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/product_image"
            android:scaleType="centerCrop"
            android:src="@drawable/softhouse" />

        <TextView
            android:id="@+id/product_name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@+id/product_image_id"
            android:fontFamily="sans-serif"
            android:text="@string/apple_macbook_pro"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/product_location_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_name_id"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@+id/product_image_id"
            android:drawableStart="@drawable/ic_location_on_black_24dp"
            android:fontFamily="sans-serif"
            android:text="@string/luanda_lda"
            android:textSize="14sp"
            android:textAlignment="textStart"
            />

        <TextView
            android:id="@+id/product_price_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_location_id"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/product_image_id"
            android:fontFamily="sans-serif"
            android:text="@string/price_in_dollor"
            android:textAlignment="textStart"
            android:textColor="@color/alternativa_home_1"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
